Fix headless detection.